--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.kieranbrowne.cameraadversaria">
-    <uses-sdk
-            android:minSdkVersion="21"
-            android:targetSdkVersion="28" />
     <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-feature android:name="android.hardware.camera2.full" />
@@ -23,7 +20,7 @@
         </activity>
         <provider
                 android:name="android.support.v4.content.FileProvider"
-                android:authorities="com.example.android.fileprovider"
+                android:authorities="com.kieranbrowne.cameraadversaria.provider"
                 android:exported="false"
                 android:grantUriPermissions="true">
             <meta-data
