Files sent to public directory where they can be accessed by google photos

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
 
         <provider
                 android:name="android.support.v4.content.FileProvider"
-                android:authorities="com.kieranbrowne.cameraadversaria.provider"
+                android:authorities="com.kieranbrowne.cameraadversaria.fileprovider"
                 android:exported="false"
                 android:grantUriPermissions="true">
             <meta-data
