--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,12 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'jp.co.cyberagent.android:gpuimage:2.0.0'
+    implementation 'org.tensorflow:tensorflow-lite:+'
+}
+
+android {
+    aaptOptions {
+        noCompress "tflite"
+        noCompress "lite"
+    }
 }
